# PR1M3

L0 poetry/ex/example/: pyproject.toml
L0 poetry/poetry/: main.py  main2.py  main3.py  pyproject.toml
L1 Intro/django_intro/: .env  db.sqlite3  pyproject.toml
L1 Intro/django_intro/config/: settings.py  urls.py
L1 Intro/django_intro/myapp/: urls.py  views.py
L1 Intro/django_intro/templates/: index.html
L10 Forms/forms/: db.sqlite3
L10 Forms/forms/blog/: admin.py  urls.py
L10-11 Forms/forms/: pyproject.toml
L10-11 Forms/forms/blog/: forms.py  views.py
L10-11 Forms/forms/config/: settings.py  urls.py
L12 Messages/mes/: db.sqlite3  pyproject.toml
L12 Messages/mes/blog/: mixins.py  models.py  urls.py  views.py
L12 Messages/mes/config/: settings.py
L13 Auth/auth/: db.sqlite3
L13 Auth/auth/blog/: forms.py  urls.py  views.py
L13 Auth/auth/config/: urls.py
L13-14 Auth/auth/: db.sqlite3  pyproject.toml
L13-14 Auth/auth/blog/: mixins.py  urls.py  validators.py
L13-14 Auth/auth/config/: settings.py
L13-14 Auth/auth/users/: admin.py  forms.py  urls.py  views.py
L15 DRF/drf/: db.sqlite3
L15-18 DRF/drf/: db.sqlite3  dummy_data.json
L15-20 DRF/drf/: db.sqlite3
L2 Views/views/: db.sqlite3  pyproject.toml
L3 Templates/temps/: db.sqlite3  pyproject.toml
L4 Models/models/: db.sqlite3  pyproject.toml
L5 CBV/cbv/: db.sqlite3  pyproject.toml
L6 Queryset/queryset/: db.sqlite3  pyproject.toml
L7 Model Relations/rels/: db.sqlite3
L8 Aggregate annotate/aggr/: db.sqlite3  pyproject.toml
L9 Admin/admin/: db.sqlite3  pyproject.toml
(+114 files in other folders)
